--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,34 +1,81 @@
 body {
-  margin: 0;
-  font-family: "Hiragino Kaku Gothic ProN";
+  font-family: "ﾒｲﾘｵ";
 }
-
-a {
-  text-decoration: none;
+li {
+  list-style: none;
+ }
+.header{
+  background-color: #f7f2b4;
+  height: 90px;
 }
-
-.container {
-  width: 1170px;
-  padding: 0 15px;
-  margin: 0 auto;
+.header-logo{
+  font-size: 36px;
+  float: left;
+  padding: 20px 40px;
+ }
+ .header-list li {
+  float: left;
+  padding: 33px 20px;
 }
-
-.top-wrapper {
-  padding: 180px 0 100px 0;
-  background-image: url(https://prog-8.com/images/html/advanced/top.png);
-  background-size: cover;
-  color: white;
+.main{
+  padding: 100px 60px;
 }
-
-/* top-wrapperの中の<h1>のCSSを指定してください */
-.top-wrapper h1 {
-  opacity: 0.7;
-  font-size: 45px;
-  letter-spacing: 5px;
+.copy-container h1{
+  font-size: 140px;
+ }
+.copy-container span{
+  color: red;
+ }
+ .copy-container h2{
+   font-size: 60px;
+  }
+.contents{
+  height: 500px;
+  margin: 100px;
+ }
+.section-title{
+  border-bottom: 2px solid #dee7ec;
+  font-size: 28px;
+  pading-bottom: 15px;
+  margin-bottom: 50px;
+ }
+.contents-item{
+   float: left;
+   margin-right: 40px;
+ }
+ .contents-item p{
+   font-size: 24px;
+   margin-top: 30px;
+  }
+.contents-form{
+  padding-top: 100px;
+ }
+input,textarea{
+ width: 400px;
+ margin-top: 10px;
+ margin-bottom: 30px;
+ padding: 20px;
+ font-size: 18px;
+ border: 1px solid #dee7ec;
+ }
+.contact-submit{ 
+  background-color: #dee7ec;
+  color: #889eab;
 }
-
-
-/* top-wrapperの中の<p>のCSSを指定してください */
-.top-wrapper p {
-  opacity: 0.7
+ }
+.footer{
+  background-color: #2f5167;
+  height: 120px;
+  color: #fff;
+  padding: 40px;
+}
+.footer-logo {
+  font-size: 60px;
+  float: left;
+ }
+ .footer-list{
+   float: right;
+  }
+.footer-list li{
+  padding-bottom: 20px;
 }
